--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,30 +8,49 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.searchrecipes.SearchFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/searchRecipeLayout"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/searchBarContainer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/fragment_vertical_margin"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/ic_search"
-        app:endIconMode="clear_text"
-        app:layout_constraintWidth_percent="0.8"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-        android:hint="@string/write_recipe_name">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/searchRecipeInput"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/searchRecipeLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textFilter"
-            android:minHeight="48dp"
-            android:textColorHint="#616161">
+            android:layout_weight="0.8"
+            android:hint="@string/write_recipe_name"
+            app:endIconMode="clear_text"
+            app:startIconDrawable="@drawable/ic_search">
 
-        </com.google.android.material.textfield.TextInputEditText>
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/searchRecipeInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textFilter"
+                android:minHeight="48dp"
+                android:textColorHint="#616161">
+
+            </com.google.android.material.textfield.TextInputEditText>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.05"
+            android:src="@android:drawable/ic_menu_camera" />
+
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -39,7 +58,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchRecipeLayout">
+        app:layout_constraintTop_toBottomOf="@id/searchBarContainer">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
