--- a/app/src/main/res/layout/recipe_view_fragment.xml
+++ b/app/src/main/res/layout/recipe_view_fragment.xml
@@ -51,14 +51,23 @@
                 android:fontFamily="sans-serif-light"
                 android:text="@string/steps" />
         </com.google.android.material.tabs.TabLayout>
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvIngredientItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tabLayout"
             android:layout_marginTop="20dp" />
-
+        <TextView
+            android:id="@+id/stepsDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tabLayout"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="15sp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            />
     </RelativeLayout>
 
 
